--- a/src/css/main.css
+++ b/src/css/main.css
@@ -49,6 +49,7 @@ html,
 body {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
 	min-height: 100vh;
 
 	font-family: "DM Sans", sans-serif;
@@ -57,6 +58,16 @@ body {
 	/* Light mode */
 	background-color: var(--page-bg);
 	color: var(--text-color);
+}
+
+#root {
+	min-height: 100vh;
+}
+
+.App {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
 
 /* General */
